# ge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: README.md  architecture.md  salvage.md
docs/manual/: 01-getting-started.md  02-navigation.md  03-ships-and-equipment.md  04-planets.md  05-combat.md  06-planetary-battles.md  07-cybertrons.md  08-teams-and-comms.md  09-scoring.md  10-command-reference.md  README.md
docs/original/: README.md  online-help.md  users-guide.md
docs/spec/: combat.md  economy.md  meta.md  universe.md
ge/: __init__.py  data.py  demo.py  events.py  geometry.py  models.py  sim.py  universe.py
salvage/: README.md
salvage/data/: config.toml  constants.toml  ships.toml
salvage/spec/: combat.md  commands.md  cyborgs.md
salvage/tools/: check_transcription.py  extract_config.py  extract_help.py  extract_ships.py
src/resources/: topline.txt
tests/: test_data.py  test_geometry.py  test_movement.py
